<resources>
    <string name="app_name">CalmLif3</string>
    <string name="login">Login</string>
    <string name="enterMail">Enter your mail</string>
    <string name="enter_password">Enter your password</string>
    <string name="enterName">Enter you name</string>
    <string name="go_to_register">New user? Register Now</string>
    <string name="go_to_login">Already a user? Login here</string>
    <string name="register">Register</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_notification">Notification</string>
    <string name="title_add">Add</string>
    <string name="title_search">Search</string>
    <string name="title_feed">Feed</string>
    <string name="profile_image">Loading Image</string>
    <string name="title_add_heading">Add Moment</string>
    <string name="save_moment">Save Moment</string>
    <string name="enter_title_of_moment">Enter title of moment</string>
    <string name="title_my_moments">My Moments</string>
    <string name="privateAcc">Private</string>
    <string name="currentMood">What\'s your mood now</string>
</resources>