<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/icon_feed"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/icon_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/icon_add"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_my_moments"
        android:icon="@drawable/icon_my_moments"
        android:title="@string/title_my_moments" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/title_profile" />

</menu>