<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".ui.add.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/currentMood" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/arrow_down" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageHappy"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:onClick="happyClicked"
                android:src="@drawable/icon_happy"
                tools:ignore="OnClick" />

            <ImageView
                android:id="@+id/imageCrazy"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:onClick="crazyClicked"
                android:src="@drawable/icon_crazy1"
                tools:ignore="OnClick" />

            <ImageView
                android:id="@+id/imageKiss"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:onClick="romanticClicked"
                android:src="@drawable/icon_kiss"
                tools:ignore="OnClick" />

            <ImageView
                android:id="@+id/imageSad"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:onClick="sadClicked"
                android:src="@drawable/icon_sad"
                tools:ignore="OnClick" />

            <ImageView
                android:id="@+id/imageAngry"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:onClick="angryClicked"
                android:src="@drawable/icon_angry"
                tools:ignore="OnClick" />

        </LinearLayout>


        <EditText
            android:id="@+id/momentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/enter_title_of_moment" />

        <EditText
            android:id="@+id/momentText"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:ems="10"
            android:layout_marginHorizontal="10dp"
            android:visibility="gone"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <Switch
            android:id="@+id/privacySwitch"
            android:onClick="privacyAdded"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:text="@string/privateAcc"
            android:layout_gravity="center_horizontal"
            tools:ignore="OnClick,UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:layout_marginHorizontal="10dp"
            android:textColor="#fff"
            android:onClick="saveMoment"
            android:text="@string/save_moment"
            tools:ignore="OnClick" />

    </LinearLayout>

</ScrollView>